# repoactions

./: .gitignore  Makefile  Makefile.in  README.md  README.md.in  configure  configure.ac  install.sh  repoactions.sh  uninstall.sh
src/: _repoactions.sh  repoactions.sh  repoactions.sh.in  show_repoactions.sh  show_repoactions.sh.in
